--- a/css/slider.css
+++ b/css/slider.css
@@ -15,11 +15,16 @@
         width: 100%
         background-color: #192123;
         padding: 10px; */
+        
     }
     .splide__slide div{
         width: 50%;
-        height: 50%;
+        height: 17%;
         background-color: rgba(0, 0, 0, 0.5);
         margin: 15% auto;
         color: #fff;
+        font-family: 'Times New Roman', Times, serif;
+        font-weight: 400;
+        letter-spacing: 1px;
+        font-size: 1.5rem;
     }
