--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     font-family:"poppins",sans-serif;
 }
 header{
-    height: 80vh;
     width: 100%;
     /* background:linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.3)); */
     /* background-color: #192123; */
@@ -52,8 +51,18 @@ header>.main-menu img{
     /* position: relative; */
     display: flex;
     justify-content: center;
+    z-index: ;
+    margin: 0px;
+}
+
+.sub-menu>ul{
+    z-index: 1;
+    background-color: rgba(0, 0, 0, 0.8);
     padding: 6px 0px;
-    background-color: rgba(0, 0, 0, 0.4);
+    width: 100%;
+    justify-content: center;
+    transform: translateY(-0.4rem);
+    text-align: center;
 }
 
 .sub-menu>ul>li{
@@ -71,12 +80,12 @@ header>.main-menu img{
     text-decoration: underline;
 }
 
-#mySlider{
-    position: absolute;
-    width: 100%;
-    top: 10%;
-    z-index: -1;
-}
-main{
+.thumbnail-slider{
     position: relative;
+    width: 100%;
+    transform: translateY(-2.5rem);
+}
+
+main{
+
 }
