--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ main{
 .division-col{
     flex-basis: 31%;
     margin: 30px 20px 20px 0px;  
-    /* height: 350px;  */
+    height: 350px; 
     background-position: center;
     background-repeat: no-repeat;
 }
