--- a/css/style.css
+++ b/css/style.css
@@ -100,4 +100,21 @@ main{
 }
 .division-col{
     flex-basis: 31%;
+    margin: 30px 20px 20px 0px;
+}
+
+.division-col .overlay{
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 250px;
+    text-align: left;
+}
+
+.division-col .overlay>h3{
+    padding: 20px;
+    line-height: 24px;
+}
+
+.division-col .overlay>p{
+    height: 0%;
 }
